@@ -204,14 +204,14 @@ live link to PEP 258 here.</p>
 </ul>
 </li>
 <li>Nested item 3.</li>
-<li>This nested list should be compacted by the HTML writer.<a class="target" id="target" name="target"></a><!-- Even if this item contains a target and a comment. -->
+<li>This nested list should be compacted by the HTML writer.<!-- Even if this item contains a target and a comment. -->
 </li>
 </ul>
 </li>
 </ul>
 </div>
 <div class="section" id="enumerated-lists">
-<h2><a class="toc-backref" href="#id33" name="enumerated-lists">2.3&nbsp;&nbsp;&nbsp;Enumerated Lists</a></h2>
+<h2><a class="toc-backref" href="#id33" name="enumerated-lists">2.3&nbsp;&nbsp;&nbsp;<a class="target" id="target" name="target"></a>Enumerated Lists</a></h2>
 <ol class="arabic">
 <li><p class="first">Arabic numerals.</p>
 <ol class="loweralpha simple">
@@ -490,7 +490,7 @@ citation.</p>
 </div>
 <div class="section" id="targets">
 <h2><a class="toc-backref" href="#id43" name="targets">2.13&nbsp;&nbsp;&nbsp;Targets</a></h2>
-<a class="target" id="example" name="example"></a><p>This paragraph is pointed to by the explicit &quot;example&quot; target. A
+<p><a class="target" id="example" name="example"></a>This paragraph is pointed to by the explicit &quot;example&quot; target. A
 reference can be found under <a class="reference" href="#inline-markup">Inline Markup</a>, above. <a class="reference" href="#inline-hyperlink-targets">Inline
 hyperlink targets</a> are also possible.</p>
 <p>Section headers are implicit targets, referred to by name. See
